--- a/templates/modal.html
+++ b/templates/modal.html
@@ -52,6 +52,10 @@
                     <option value="Reportable">Reportable</option>
                 </select>
             </div>
+            <div class="form-group">
+                <label for="comments">Comments:</label>
+                <textarea id="comments" name="comments" rows="4"></textarea>
+            </div>
             <button type="submit">Update</button>
         </form>
     </div>
